[package]
name = "nccl"
version = "5.4.0"
authors = ["Zack <zphixon@gmail.com>"]
description = "Minimal configuration file format and library."
documentation = "https://docs.rs/nccl"
homepage = "https://github.com/zphixon/nccl"
repository = "https://github.com/zphixon/nccl"
keywords = ["nccl", "configuration", "config"]
categories = ["config"]
license = "MIT"
readme = "README.md"
edition = "2021"

[features]
default = []
fuzz = ["arbitrary"]

[dependencies]
indexmap = "2.2.5"
fnv = "1.0.7"
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.5"

[[example]]
name = "big"
